--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </li>
                 <li class="project-item">
                     <span class="project-s">
-                    <p class="project-link">Crosses are zeros(Lite)
-                    ..................................
+                    <p class="project-link">Tic-tac-toe(Lite)
+                    .................................................
                     <span class="project-bracket">[</span> C++ <span class="project-bracket">]</span>
                     </span></p>
                 </li>
